# dream-central-storage

./: .env.prod.template  .gitignore  AGENTS.md  FlowBook Dektop App(Offline).txt  package-lock.json  package.json  turbo.json
.ai/: debug-log.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  update_book_metadata.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250113_01_create_api_keys_table.py  20250922_01_create_books_table.py  20250923_01_create_users_table.py  20251115_01_create_webhook_tables.py  (+9 more)
apps/api/app/: main.py
apps/api/scripts/: __init__.py  create_admin.py  init_minio.py
apps/api/tests/: test_ai_content_endpoints.py  test_ai_data.py  test_ai_data_api.py  test_apps_upload.py  test_audio_generation.py  test_auth_login.py  test_auto_processing.py  test_book_webhooks.py  test_books_endpoints.py  test_books_upload.py  test_cors.py  test_health.py  test_llm_service.py  test_metrics_endpoint.py  test_migrations_books.py  test_migrations_users.py  test_minio_service.py  test_pdf_extraction.py  test_processing_api.py  test_processing_dashboard.py  test_processing_settings.py  test_publisher_assets_endpoints.py  test_publisher_model.py  test_publisher_repository.py  test_publishers_endpoints.py  test_queue_service.py  test_schemas_book.py  test_schemas_publisher.py  test_scripts_create_admin.py  test_security.py  test_segmentation.py  test_storage_endpoints.py  test_storage_listing.py  test_storage_service.py  test_storage_trash_endpoints.py  test_teachers_endpoints.py  test_topic_analysis.py  test_tts_service.py  test_update_book_metadata.py  test_vocabulary_extraction.py
dream-central-storage-api/: .env.example  README.md  docker-compose.minio.yml  pyproject.toml
dream-central-storage-api/app/: main.py
dream-central-storage-api/app/core/: config.py
dream-central-storage-api/app/middleware/: auth.py
dream-central-storage-api/app/services/: storage.py
(+460 files in other folders)
