[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dream-central-storage-api"
version = "0.1.0"
description = "FastAPI service for central storage (assets and datasets)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.103,<1",
  "uvicorn[standard]>=0.23,<1",
  "pydantic>=2.7,<3",
  "minio>=7.2,<8",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "httpx>=0.24,<1",
  "black>=24.3.0",
  "ruff>=0.5.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["app/tests"]
markers = [
  "integration: marks tests that require local MinIO (deselect with '-m \"not integration\"')",
]
